--- a/apps/fish_market_web/lib/fish_market_web/components/layouts/root.html.heex
+++ b/apps/fish_market_web/lib/fish_market_web/components/layouts/root.html.heex
@@ -14,6 +14,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.bunny.net/css2?family=Noto+Sans:wght@300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@300;400;500;600;700;800;900&family=Noto+Sans+TC:wght@300;400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;600;700;800;900&family=Noto+Sans+KR:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.bunny.net/css2?family=Caveat:wght@600&display=swap"
       rel="stylesheet"
     />
