--- a/apps/fish_market_web/lib/fish_market_web/live/session_live.html.heex
+++ b/apps/fish_market_web/lib/fish_market_web/live/session_live.html.heex
@@ -187,6 +187,30 @@
                           />
                         </.form>
                       </div>
+
+                      <div class="space-y-1">
+                        <label
+                          for="session-menu-verbosity-select"
+                          class="inline-block text-xs font-medium text-gray-700 dark:text-gray-200"
+                        >
+                          Verbosity
+                        </label>
+                        <.form
+                          for={@verbosity_form}
+                          id="session-menu-verbosity-form"
+                          phx-change="change-session-verbosity"
+                          class="w-full [&_.fieldset]:mb-0"
+                        >
+                          <.input
+                            field={@verbosity_form[:verbose_level]}
+                            id="session-menu-verbosity-select"
+                            type="select"
+                            options={@verbosity_select_options}
+                            disabled={is_nil(@selected_session_key)}
+                            class="block w-full rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm leading-5 text-gray-700 dark:border-gray-600 dark:bg-gray-900 dark:text-gray-100"
+                          />
+                        </.form>
+                      </div>
                     </div>
                     <div class="p-3 pb-4">
                       <button
