--- a/apps/fish_market_web/lib/fish_market_web/components/layouts/root.html.heex
+++ b/apps/fish_market_web/lib/fish_market_web/components/layouts/root.html.heex
@@ -8,6 +8,10 @@
       {assigns[:page_title]}
     </.live_title>
     <link rel="icon" href={~p"/favicon.ico"} sizes="any" />
+    <link rel="icon" href={~p"/favicon-32x32.png"} type="image/png" sizes="32x32" />
+    <link rel="icon" href={~p"/favicon-16x16.png"} type="image/png" sizes="16x16" />
+    <link rel="apple-touch-icon" href={~p"/apple-touch-icon.png"} sizes="180x180" />
+    <link rel="manifest" href={~p"/site.webmanifest"} />
     <link rel="preconnect" href="https://fonts.bunny.net" />
     <link
       href="https://fonts.bunny.net/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
