--- a/apps/fish_market_web/lib/fish_market_web/components/layouts/root.html.heex
+++ b/apps/fish_market_web/lib/fish_market_web/components/layouts/root.html.heex
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
+    />
     <meta name="csrf-token" content={get_csrf_token()} />
     <meta name="theme-color" content="#0f172a" />
     <.live_title default="FishMarket" suffix=" · Phoenix Framework">
